# UniversalFunction

./: .gitignore  README.md  install.bat  pyproject.toml  requirements.txt  start.bat
backend/: agent.py  executor.py  main.py  sessions.py
frontend/: app.js  index.html  style.css
