[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "universal-function"
version = "0.1.0"
description = "Turn any user-described mapping f(x)=y into a real, runnable Python function"
requires-python = ">=3.10"
dependencies = [
    # ── Core backend ──────────────────────────────────────────────────────────
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-dotenv>=1.0",
    "openai>=1.30",
    "python-multipart>=0.0.9",
    "pydantic>=2.6",

    # ── Workspace runtime — used by generated functions (pre-installed so
    #    the executor doesn't have to pip-install on first run) ────────────────

    # numerics / data
    "numpy>=1.26",
    "scipy>=1.13",          # scientific computing — FFT, signal, stats
    "pandas>=2.2",          # tabular data, CSV in/out

    # visualisation
    "matplotlib>=3.8",
    "networkx>=3.3",        # graph / network diagrams
    "wordcloud>=1.9",       # text → word-cloud images
    "sympy>=1.12",          # symbolic math / LaTeX rendering

    # image processing
    "Pillow>=10.3",
    "imageio>=2.34",        # read/write many image & video formats

    # document / markup
    "pypdf>=4.2",           # PDF reading (pypdf)
    "fpdf2>=2.7",           # PDF generation
    "Markdown>=3.6",        # Markdown → HTML
    "qrcode[pil]>=7.4",     # QR-code generation

    # audio / MIDI
    "MIDIUtil>=1.2",        # write MIDI files
    "mido>=1.3",            # read & manipulate MIDI files
    "pydub>=0.25",          # audio slicing / format conversion (needs ffmpeg)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",          # async test client for FastAPI
]
